--- a/web/src/app/users/users-list/users-list.component.html
+++ b/web/src/app/users/users-list/users-list.component.html
@@ -1,7 +1,10 @@
-<div>
-  users-list works!
-  <div style="margin: 20px"></div>
-  <div *ngFor="let user of users; let i = index">
-    <span>{{user.username}}</span>
+<div class="users-list-page">
+  <div class="users-list" *ngFor="let user of users; let i = index">
+    <div class="username">
+      <span class="username-text">{{user.username}}</span>
+    </div>
+    <div class="role">
+      <span class="role-text">user role</span>
+    </div>
   </div>
 </div>
