- added ngx-logger - added automatic login for debug mode

--- a/web/src/app/users/users-list/users-list.component.scss
+++ b/web/src/app/users/users-list/users-list.component.scss
@@ -20,7 +20,7 @@
       .username-text {
         margin-left: auto;
         margin-right: auto;
-        cursor: pointer;
+        cursor: default;
       }
     }
 
@@ -31,7 +31,7 @@
       .role-text {
         margin-left: auto;
         margin-right: auto;
-        cursor: pointer;
+        cursor: default;
       }
     }
   }
