--- a/web/src/app/users/users-list/users-list.component.html
+++ b/web/src/app/users/users-list/users-list.component.html
@@ -1,10 +1,25 @@
 <div class="users-list-page">
-  <div class="users-list" *ngFor="let user of users; let i = index">
-    <div class="username">
-      <span class="username-text">{{user.username}}</span>
-    </div>
-    <div class="role">
-      <span class="role-text">user role</span>
-    </div>
+  <!--<i class="material-icons">add</i>-->
+  <div class="users-list">
+    <table mat-table #table [dataSource]="users">
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef>Username</th>
+        <td mat-cell class="username" *matCellDef="let element"> {{element.username}} </td>
+      </ng-container>
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef>Role</th>
+        <td mat-cell class="role" *matCellDef="let element">user role</td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
+  <!--<div class="users-list" *ngFor="let user of users; let i = index">-->
+    <!--<div class="username">-->
+      <!--<span class="username-text">{{user.username}}</span>-->
+    <!--</div>-->
+    <!--<div class="role">-->
+      <!--<span class="role-text">user role</span>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
