--- a/web/src/app/modules/header/header.component.html
+++ b/web/src/app/modules/header/header.component.html
@@ -5,6 +5,6 @@
              class="main-menu"
              outlet="main">
     <ui-hmenu-item path="home" title="home"></ui-hmenu-item>
-    <ui-hmenu-item path="users" title="{{ 'main_menu_admin' | translate }}"></ui-hmenu-item>
+    <ui-hmenu-item path="admin" title="{{ 'main_menu_admin' | translate }}"></ui-hmenu-item>
   </ui-hmenu>
 </div>
