--- a/web/src/app/modules/admin/users/users.component.html
+++ b/web/src/app/modules/admin/users/users.component.html
@@ -1,3 +1,10 @@
-<p>
-  users works!
-</p>
+<div class="left-panel" fxFlex="20%" fxLayout="column">
+
+</div>
+
+<div class="users-list-area" fxFlex="60%" fxLayout="column">
+  <users-list-controls class="controls"></users-list-controls>
+  <users-list class="users-list"></users-list>
+</div>
+
+<div class="right-panel" fxFlex="20%" fxLayout="column"></div>
