- updated angular libraries and typescript - added use of matIconModule

--- a/web/src/app/modules/admin/users/users-list-controls/users-list-controls.component.html
+++ b/web/src/app/modules/admin/users/users-list-controls/users-list-controls.component.html
@@ -1,1 +1,8 @@
-users-list-controls works!
+<div fxLayout="row" fxLayoutAlign="end">
+  <div flex="1 1 auto">
+
+    <button mat-button>
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+</div>
