added new-user form and dialog support

--- a/web/src/app/modules/admin/users/users-list-controls/users-list-controls.component.html
+++ b/web/src/app/modules/admin/users/users-list-controls/users-list-controls.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="end">
   <div flex="1 1 auto">
 
-    <button mat-button>
+    <button mat-button (click)="this.onAddUser()">
       <mat-icon>add</mat-icon>
     </button>
   </div>
